# bignum2

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  configure.ac  reconfigure.sh  tools_config.h
bignum/: BigInt.cc  BigInt.h  bignum2.cc  bignum2.h  vchar.cc  vchar.h
cpputils/cpputilsshared/: blockupdate.cc
origin/awk/: bignum.awk  start.sh
origin/neu_sep04/: README
origin/neu_sep04/divtest/: compile.csh  divtest.c
origin/neu_sep04/euclid/: compile.csh  euclid_bignum.c
origin/neu_sep04/fakult/: compile.csh
origin/neu_sep04/hexbcd/: compile.csh
origin/neu_sep04/lib/: bignum_lib.c  compile.csh
origin/neu_sep04/list/: compile.csh  conv.awk  genprime.c  prime.html  small.html
origin/neu_sep04/miller/: README  compile.csh  mr_x_groups.html  primz
origin/neu_sep04/modexp/: compile.csh
origin/neu_sep04/randz/: compile.csh  rand_bignum_1.c
origin/neu_sep04/save/: bignum_lib.c  fakult_bignum.c  hexbcd_bignum.c  modexp_bignum.c  mr_bignum.c  rand_bignum.c
origin/neu_sep04/save1/: README  bignum.h  gemein.awk  mr_bignum.c  prime_100000.c  primelist_bignum.c  rand_bignum.c  standard_main.c
src/: .gitignore  BigInt.cc  BigInt.h  DetectLocale.cc  bignum2.cc  bignum2.h  format.cpp  format.h  main.cc  read_file.cc  vars.l  vars.y  vchar.cc  vchar.cpp  vchar.h
test/: test.sh
test/t001/: INPUT.txt  RESULT.txt
test/t003/: INPUT.txt  bc.txt  calc_erg_with_bc.sh
test/t004/: INPUT.txt  RESULT.txt  calc_erg_with_bc.sh
tools/: thread.cpp
